--- a/sample_test.yaml
+++ b/sample_test.yaml
@@ -6,9 +6,10 @@ nginx:
   log_custom_casts:
     custom_field: Integer
     custom_time_field: Datetime
-  log_format: '$remote_addr - $remote_user [$time_local] "$request" $status $bytes_sent "$http_referer" "$http_user_agent" $custom_field <$custom_time_field>'
+  log_format: '$remote_addr - $remote_user [$time_local] "$request" $status $bytes_sent $request_time "$request_method" "$http_referer" "$http_user_agent" $https $custom_field <$custom_time_field>'
+  log_remove_hyphen: true
 scheme:
-  logs_table: 'table_name'
+  logs_table: only_tests.access_log
   columns:
     remote_addr: remote_addr
     remote_user: remote_user
@@ -16,7 +17,10 @@ scheme:
     request: request
     status: status
     bytes_sent: bytes_sent
+    request_time: request_time
+    request_method: request_method
     http_referer: http_referer
     http_user_agent: http_user_agent
+    https: https
     custom_field: custom_field
     custom_time_field: custom_time_field
